# KenyanFood

./: .gitignore  Cargo.toml  app.css  package-lock.json  package.json
public/: output.css
src/: auth.rs  lib.rs  main.rs  middleware.rs  recipes.rs
templates/: index.html
templates/pages/: SignUp.html  formErrors.html  landingpage.html  login.html  more_recipe.html  pagination_span.html  recipe_details.html  redirect.html
templates/partials/: toast.html
